tests/core/snapshots/auth-basic.md_5.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "protectedType": {
        "name": "mutation name",
        "nested": "mutation nested"
      }
    }
  }
}
