tests/core/snapshots/auth-basic.md_6.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Authentication Failure: Invalid Authorization Header",
        "locations": [
          {
            "line": 0,
            "column": 0
          }
        ]
      }
    ]
  }
}
