tests/core/snapshots/auth-jwt.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "scalar": "data from public scalar",
      "nested": {
        "name": "nested name"
      }
    }
  }
}
