tests/core/snapshots/auth-jwt.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "protectedScalar": "data from protected scalar",
      "nested": {
        "name": "nested name",
        "protected": "protected nested"
      },
      "protectedType": {
        "name": "protected type name",
        "nested": "protected type nested"
      }
    }
  }
}
