tests/core/snapshots/auth-multiple-complex.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "animals": [
        {
          "__typename": "Dog",
          "bark": "woof"
        },
        {
          "__typename": "Cat"
        },
        {
          "__typename": "Bird"
        }
      ]
    }
  }
}
