tests/core/snapshots/auth-multiple-complex.md_1.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "animals": [
        {
          "__typename": "Dog"
        },
        {
          "__typename": "Cat",
          "meow": "meow"
        },
        {
          "__typename": "Bird"
        }
      ]
    }
  }
}
